--- a/final-distribuidos-proyecto/final-distribuidos-proyecto.vbproj
+++ b/final-distribuidos-proyecto/final-distribuidos-proyecto.vbproj
@@ -107,7 +107,6 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="cine.aspx" />
     <Content Include="combo.aspx" />
     <Content Include="comprobante.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -130,8 +129,9 @@
     <Content Include="dulce.aspx" />
     <Content Include="entradas.aspx" />
     <Content Include="formaPago.aspx" />
-    <Content Include="formato.aspx" />
+    <Content Include="formatoPedro.aspx" />
     <Content Include="login.aspx" />
+    <Content Include="principal.aspx" />
     <Content Include="registro.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -142,13 +142,6 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="cine.aspx.designer.vb">
-      <DependentUpon>cine.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="cine.aspx.vb">
-      <DependentUpon>cine.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
     <Compile Include="combo.aspx.designer.vb">
       <DependentUpon>combo.aspx</DependentUpon>
     </Compile>
@@ -191,12 +184,12 @@
       <DependentUpon>formaPago.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="formato.aspx.designer.vb">
-      <DependentUpon>formato.aspx</DependentUpon>
+    <Compile Include="formatoPedro.aspx.designer.vb">
+      <DependentUpon>formatoPedro.aspx</DependentUpon>
     </Compile>
-    <Compile Include="formato.aspx.vb">
-      <DependentUpon>formato.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
+    <Compile Include="formatoPedro.aspx.vb">
+      <DependentUpon>formatoPedro.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="login.aspx.designer.vb">
       <DependentUpon>login.aspx</DependentUpon>
@@ -230,6 +223,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="principal.aspx.designer.vb">
+      <DependentUpon>principal.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="principal.aspx.vb">
+      <DependentUpon>principal.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="registro.aspx.designer.vb">
       <DependentUpon>registro.aspx</DependentUpon>
