--- a/final-distribuidos-proyecto/final-distribuidos-proyecto.vbproj
+++ b/final-distribuidos-proyecto/final-distribuidos-proyecto.vbproj
@@ -107,6 +107,7 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="cines.aspx" />
     <Content Include="combo.aspx" />
     <Content Include="comprobante.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -143,6 +144,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cines.aspx.designer.vb">
+      <DependentUpon>cines.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="cines.aspx.vb">
+      <DependentUpon>cines.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="combo.aspx.designer.vb">
       <DependentUpon>combo.aspx</DependentUpon>
     </Compile>
